fixed instructions box sliding-off-screen problem

--- a/public/themes/default/stylesheets/style.css
+++ b/public/themes/default/stylesheets/style.css
@@ -1114,6 +1114,14 @@ td.align-top {
   word-wrap: break-word;
 }
 
+.special-instructions-block{
+  margin-left: 0px;
+}
+
+.auto-width-legend{
+  width: auto !important;
+}
+
 .install-button {
   font-size: 12px;
   font-weight: bold;
